--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
         run: composer install --optimize-autoloader --no-interaction --no-progress --prefer-dist --ignore-platform-reqs
 
       - name: PHPStan
-        run: docker exec -t laravel-circuit-breaker-php vendor/bin/phpstan analyse src tests --memory-limit=256M
+        run: docker compose exec -t php vendor/bin/phpstan analyse src tests --memory-limit=256M
 
       - name: PHPcs
-        run: docker exec -t laravel-circuit-breaker-php vendor/bin/phpcs src tests
+        run: docker compose exec -t php vendor/bin/phpcs src tests
 
       - name: Run phpunit
-        run: docker exec -t laravel-circuit-breaker-php vendor/bin/phpunit
+        run: docker compose exec -t php vendor/bin/phpunit
