--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "phpunit/phpunit": "^12.5",
         "orchestra/testbench": "^10.9",
         "phpstan/phpstan": "^2.1",
-        "squizlabs/php_codesniffer": "^4.0"
+        "squizlabs/php_codesniffer": "^4.0",
+        "vimeo/psalm": "^6.15",
+        "psalm/plugin-laravel": "^3.0"
     },
     "autoload": {
         "psr-4": {
