--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": "^8.3",
-        "syastrebov/circuit-breaker": "0.0.6",
+        "syastrebov/circuit-breaker": "0.0.9",
         "illuminate/contracts": "^12.0",
         "illuminate/support": "^12.0"
     },
@@ -25,7 +25,8 @@
         "phpstan/phpstan": "^2.1",
         "squizlabs/php_codesniffer": "^4.0",
         "vimeo/psalm": "^6.15",
-        "psalm/plugin-laravel": "^3.0"
+        "psalm/plugin-laravel": "^3.0",
+        "predis/predis": "^3.3"
     },
     "autoload": {
         "psr-4": {
